// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> component should render toast with title & message for type error 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 360px;
  -webkit-animation: animation-0 0.75s ease-in;
  animation: animation-0 0.75s ease-in;
  -webkit-transition: all 0.75s ease-in-out;
  transition: all 0.75s ease-in-out;
  overflow: hidden;
  border: 1px solid #e80000;
  border-left: 6px solid #e80000;
  background-color: #ffe6e6;
  opacity: 1;
  border-radius: 0px;
  padding: 16px 16px 16px 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  font-family: DTUI-icons-sharp;
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #8c0000;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

.emotion-4 {
  font-family: Daimler CS;
  font-size: 16px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #8c0000;
}

.emotion-5 {
  color: #8c0000;
  border: 0;
  cursor: pointer;
  background: transparent;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  margin-left: auto;
  font-size: 0;
  line-height: 0;
}

.emotion-5:focus-visible {
  outline: 2px solid #000000;
  outline-offset: 1px;
}

.emotion-5:hover {
  background-color: #ff8a8a;
}

.emotion-8 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #8c0000;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
  margin-inline: calc(24px + 8px);
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toast-myId"
    type="error"
  >
    <div
      class="emotion-2"
      style="align-self: start; flex-direction: row; width: 100%; gap: 8px;"
    >
      <i
        class="emotion-3"
        color="#8c0000"
        data-testid="icon"
      >
        error
      </i>
      <span
        class="emotion-4"
        color="error.dark"
        data-testid="typography"
      >
        my title text
      </span>
      <button
        class="emotion-5 emotion-6"
        data-testid="close-button"
      >
        <i
          class="emotion-3"
          color="#8c0000"
          data-testid="icon"
        >
          close
        </i>
      </button>
    </div>
    <div
      class="emotion-8 emotion-9"
      type="error"
    >
      my message text
    </div>
  </div>
</div>
`;

exports[`<Toast /> component should render toast with title & message for type informative 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 360px;
  -webkit-animation: animation-0 0.75s ease-in;
  animation: animation-0 0.75s ease-in;
  -webkit-transition: all 0.75s ease-in-out;
  transition: all 0.75s ease-in-out;
  overflow: hidden;
  border: 1px solid #00677f;
  border-left: 6px solid #00677f;
  background-color: #deeff2;
  opacity: 1;
  border-radius: 0px;
  padding: 16px 16px 16px 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  font-family: DTUI-icons-sharp;
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #003946;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

.emotion-4 {
  font-family: Daimler CS;
  font-size: 16px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #003946;
}

.emotion-5 {
  color: #003946;
  border: 0;
  cursor: pointer;
  background: transparent;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  margin-left: auto;
  font-size: 0;
  line-height: 0;
}

.emotion-5:focus-visible {
  outline: 2px solid #000000;
  outline-offset: 1px;
}

.emotion-5:hover {
  background-color: #8ab9c4;
}

.emotion-8 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #003946;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
  margin-inline: calc(24px + 8px);
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toast-myId"
    type="informative"
  >
    <div
      class="emotion-2"
      style="align-self: start; flex-direction: row; width: 100%; gap: 8px;"
    >
      <i
        class="emotion-3"
        color="#003946"
        data-testid="icon"
      >
        info
      </i>
      <span
        class="emotion-4"
        color="informative.dark"
        data-testid="typography"
      >
        my title text
      </span>
      <button
        class="emotion-5 emotion-6"
        data-testid="close-button"
      >
        <i
          class="emotion-3"
          color="#003946"
          data-testid="icon"
        >
          close
        </i>
      </button>
    </div>
    <div
      class="emotion-8 emotion-9"
      type="informative"
    >
      my message text
    </div>
  </div>
</div>
`;

exports[`<Toast /> component should render toast with title & message for type success 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 360px;
  -webkit-animation: animation-0 0.75s ease-in;
  animation: animation-0 0.75s ease-in;
  -webkit-transition: all 0.75s ease-in-out;
  transition: all 0.75s ease-in-out;
  overflow: hidden;
  border: 1px solid #209242;
  border-left: 6px solid #209242;
  background-color: #e9f4ec;
  opacity: 1;
  border-radius: 0px;
  padding: 16px 16px 16px 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  font-family: DTUI-icons-sharp;
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #125024;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

.emotion-4 {
  font-family: Daimler CS;
  font-size: 16px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #125024;
}

.emotion-5 {
  color: #125024;
  border: 0;
  cursor: pointer;
  background: transparent;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  margin-left: auto;
  font-size: 0;
  line-height: 0;
}

.emotion-5:focus-visible {
  outline: 2px solid #000000;
  outline-offset: 1px;
}

.emotion-5:hover {
  background-color: #98cda8;
}

.emotion-8 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #125024;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
  margin-inline: calc(24px + 8px);
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toast-myId"
    type="success"
  >
    <div
      class="emotion-2"
      style="align-self: start; flex-direction: row; width: 100%; gap: 8px;"
    >
      <i
        class="emotion-3"
        color="#125024"
        data-testid="icon"
      >
        check_circle
      </i>
      <span
        class="emotion-4"
        color="success.dark"
        data-testid="typography"
      >
        my title text
      </span>
      <button
        class="emotion-5 emotion-6"
        data-testid="close-button"
      >
        <i
          class="emotion-3"
          color="#125024"
          data-testid="icon"
        >
          close
        </i>
      </button>
    </div>
    <div
      class="emotion-8 emotion-9"
      type="success"
    >
      my message text
    </div>
  </div>
</div>
`;

exports[`<Toast /> component should render toast with title & message for type warning 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 360px;
  -webkit-animation: animation-0 0.75s ease-in;
  animation: animation-0 0.75s ease-in;
  -webkit-transition: all 0.75s ease-in-out;
  transition: all 0.75s ease-in-out;
  overflow: hidden;
  border: 1px solid #fab700;
  border-left: 6px solid #fab700;
  background-color: #fff8e6;
  opacity: 1;
  border-radius: 0px;
  padding: 16px 16px 16px 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  font-family: DTUI-icons-sharp;
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #8a6500;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

.emotion-4 {
  font-family: Daimler CS;
  font-size: 16px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #8a6500;
}

.emotion-5 {
  color: #8a6500;
  border: 0;
  cursor: pointer;
  background: transparent;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  margin-left: auto;
  font-size: 0;
  line-height: 0;
}

.emotion-5:focus-visible {
  outline: 2px solid #000000;
  outline-offset: 1px;
}

.emotion-5:hover {
  background-color: #fdde8a;
}

.emotion-8 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #8a6500;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
  margin-inline: calc(24px + 8px);
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toast-myId"
    type="warning"
  >
    <div
      class="emotion-2"
      style="align-self: start; flex-direction: row; width: 100%; gap: 8px;"
    >
      <i
        class="emotion-3"
        color="#8a6500"
        data-testid="icon"
      >
        warning
      </i>
      <span
        class="emotion-4"
        color="warning.dark"
        data-testid="typography"
      >
        my title text
      </span>
      <button
        class="emotion-5 emotion-6"
        data-testid="close-button"
      >
        <i
          class="emotion-3"
          color="#8a6500"
          data-testid="icon"
        >
          close
        </i>
      </button>
    </div>
    <div
      class="emotion-8 emotion-9"
      type="warning"
    >
      my message text
    </div>
  </div>
</div>
`;
